# Confident-Splatting

./: .gitignore  README.md  confidence_utils.py  create_summary_plots.py  eval_compression_helpers.py  index.html  pyproject.toml  trainer.py  viewer.py  visualize_props.py
ExtractFromVideo/: main.py
Scraper/: main.py  requirements.txt
Scraper/streetview/: __init__.py
Street_Splats/: .gitignore  confidence_utils.py  encoder.py  environment.yml  eval_compression_helpers.py  requirements.txt  sample.py  trainer.py
Street_Splats/requirements/: requirements.txt
datasets/: colmap.py  download_dataset.py
experiments/: CLUSTER_INSTRUCTIONS.md  manifest_ablation.tsv  manifest_ablation_default.tsv  manifest_ablation_default_rank_margin_0_10_garden.tsv  manifest_full_coverage.tsv  manifest_generality.tsv  manifest_rank_margin_default.tsv  pilot_manifest.tsv  review_manifest.tsv  review_response_experiments.md
experiments/ablation_reports/garden_default/: REPORT.md  budget_confidence_rows.csv  comprehensive_ablation_summary.csv  comprehensive_ablation_summary.md  confidence_stats.csv  final_metrics.csv  manifest_rows.csv  pruning_curves_long.csv  selector_gain_table.csv  threshold_confidence_rows.csv
requirements/: environment.yml  requirements.txt
results/Efiel_With_Conf/: cfg.yml
results/Eifel/: cfg.yml
results/Eifel_MCMC/: cfg.yml
results/building/: cfg.yml
scripts/: aggregate_review_results.py  comprehensive_ablation_report.py  make_review_manifest.py
scripts/slurm/: eval_review_array.sh  train_review_array.sh
website/: index.html
(+39 files in other folders)
